<resources>
    <string name="app_name">HummFinder App</string>
    <string name="area_title">area_title</string>
    <string name="image1">image1</string>
    <string name="area_1">area_1</string>
    <string name="helloworldhelloworldhelloworldhelloworldhelloworldhelloworld">helloworldhelloworldhelloworldhelloworldhelloworldhelloworld</string>
    <string name="image2">image2</string>
    <string name="area_2">area_2</string>
    <string name="image3">image3</string>
    <string name="area_3">area_3</string>
    <string name="image4">image4</string>
    <string name="area_4">area_4</string>
    <string name="info">info</string>
    <string name="sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext">SomeTextSomeTextSomeTextSomeTextSomeTextSomeTextSomeTextSomeText</string>
    <string name="links">links</string>
    <string name="tinnitus_matching">Tinnitus Matching</string>
    <string name="sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext">sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext</string>
    <string name="calibration">Calibration</string>
    <string name="plusbutton">plusbutton</string>
    <string name="mutebutton">mutebutton</string>
    <string name="minusbutton">minusbutton</string>
    <string name="matminus">matMinus</string>
    <string name="matplus">matPlus</string>
    <string name="hz">Hz</string>
    <string name="todo">TODO</string>
    <string name="_200_hz">200 Hz</string>
    <string name="_0_hz">0 Hz</string>
    <string name="_100_hz">100 Hz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fan_off">off</string>
    <string name="fan_low">1</string>
    <string name="fan_medium">2</string>
    <string name="fan_high">3</string>
    <string name="title_activity_unassigned">UnassignedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>