<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".matching.MatchingActivity">

    <TextView
        android:id="@+id/matchingActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinnitus_matching"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/startTone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/matchingActivityTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/matchingSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/startTone">

        <TextView
            android:id="@+id/TextMatching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="150"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:paddingVertical="10dp"
            android:paddingRight="10dp"
            android:text="@string/hz"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TextMatching"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/matchingSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:thumbColor="@color/black"
        app:thumbRadius="7dp"
        app:trackColorActive="@color/black"
        app:trackColorInactive="@color/sliderTrackColor"
        app:haloColor="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/increaseFrequency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decreaseFrequency"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <ImageButton
        android:id="@+id/decreaseFrequency"
        android:layout_width="@dimen/matButtonDimensions"
        android:layout_height="@dimen/matButtonDimensions"
        android:backgroundTint="@android:color/holo_orange_light"
        android:contentDescription="@string/matminus"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/matchingSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/matchingSeekBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/matchingSeekBar"
        app:srcCompat="@drawable/ic_baseline_exposure_neg_1_24" />

    <ImageButton
        android:id="@+id/increaseFrequency"
        android:layout_width="@dimen/matButtonDimensions"
        android:layout_height="@dimen/matButtonDimensions"
        android:backgroundTint="@android:color/holo_orange_light"
        android:contentDescription="@string/matplus"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/matchingSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/matchingSeekBar"
        app:layout_constraintTop_toTopOf="@+id/matchingSeekBar"
        app:srcCompat="@drawable/ic_baseline_exposure_plus_1_24" />


    <ImageButton
        android:id="@+id/startTone"
        android:layout_width="@dimen/matButtonDimensions"
        android:layout_height="@dimen/matButtonDimensions"
        android:backgroundTint="@android:color/holo_orange_light"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck"
        android:src="@drawable/ic_baseline_play_arrow_24"/>


</androidx.constraintlayout.widget.ConstraintLayout>