<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calibration.CalibrationActivity">

    <TextView
        android:id="@+id/calibrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibration"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lcv_lineView"
        app:layout_constraintEnd_toStartOf="@+id/guide2"
        app:layout_constraintStart_toStartOf="@+id/guide1"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<hummfinderapp.alpha.calibration.Spectrum
        android:id="@+id/spektrum"
        android:layout_width="304dp"
        android:layout_height="205dp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="199dp" />-->

    <hummfinderapp.alpha.lineChart.LineChartView
        android:id="@+id/lcv_lineView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/calSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrationTitle" />

    <ImageButton
        android:id="@+id/calPlusButton"
        android:layout_width="@dimen/calButtonDimensions"
        android:layout_height="@dimen/calButtonDimensions"
        android:backgroundTint="@android:color/holo_orange_light"
        android:contentDescription="@string/plusbutton"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_exposure_plus_1_24"
        app:layout_constraintBottom_toBottomOf="@+id/calSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/guide2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calSeekBar"
        app:layout_constraintTop_toTopOf="@+id/calSeekBar"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <com.google.android.material.slider.Slider
        android:id="@+id/calSeekBar"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:stepSize="5"
        android:valueFrom="0"
        android:valueTo="100"
        app:haloColor="@color/sliderThumbHalo"
        app:layout_constraintBottom_toTopOf="@+id/btnCalPlay"
        app:layout_constraintEnd_toStartOf="@+id/calPlusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calMinusButton"
        app:layout_constraintTop_toBottomOf="@+id/lcv_lineView"
        app:thumbColor="@color/seekBarThumb"
        app:thumbRadius="7dp"
        app:thumbStrokeColor="@color/black"
        app:thumbStrokeWidth="2dp"
        app:tickColor="@color/black"
        app:trackColorActive="@color/seekBarProgress"
        app:trackColorInactive="@color/seekBarProgress"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/calMinusButton"
        android:layout_width="@dimen/calButtonDimensions"
        android:layout_height="@dimen/calButtonDimensions"
        android:backgroundTint="@android:color/holo_orange_light"
        android:contentDescription="@string/minusbutton"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_exposure_neg_1_24"
        app:layout_constraintBottom_toBottomOf="@+id/calSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/calSeekBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guide1"
        app:layout_constraintTop_toTopOf="@+id/calSeekBar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnCalPlay"
        android:layout_width="@dimen/calButtonDimensions"
        android:layout_height="@dimen/calButtonDimensions"
        android:background="@android:color/holo_orange_light"
        android:contentDescription="@string/mutebutton"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guide1"
        app:layout_constraintTop_toBottomOf="@+id/calSeekBar"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Hummfindercolor"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />



</androidx.constraintlayout.widget.ConstraintLayout>